# pygen-research

./: README.md  pyproject.toml
lab/: README.md
lab/context_switch/: bench.go  bench.py
lab/latency/: bench.go  bench.py
lab/memory/: bench.go  bench.py  compare.py  go_memory.txt  python_memory.txt
lab/scalability/: bench.go  bench.py  compare.py  go_chain.txt  python_chain.txt
lab/throughput/: bench.go  bench.py  compare.py  go_async.txt  python_async.txt
research/benchmarks/iterator/: comparison.py
research/benchmarks/lists/: generator.py
src/: real_use_case.py  simple_use_case.py
src/benchmarks/functions/: comparison.py
src/benchmarks/lists/: comparison.py  generator.py
src/benchmarks/yield_from/: comparison.py
