[project]
name = "pygen-research"
version = "0.1.0"
description = "Researching the structure of generators in Python"
authors = [
    {name = "Gleb Popov",email = "gvpopov.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dill (>=0.4.1,<0.5.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
